navbar added to index, created contact page

--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Dealership Review</title>
@@ -12,11 +12,12 @@
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
 
 </head>
-<!-- NAVBAR -->
+<body>
+    <!-- NAVBAR -->
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-header">
-              <a class="navbar-brand" href="">Home</a>
+              <a class="navbar-brand" href="/djangoapp">Home</a>
               <a class="navbar-brand" href="">NavItem</a>
               <a class="navbar-brand" href="">About</a>
               <a class="navbar-brand" href="/djangoapp/contact">Contact Us</a>
@@ -25,13 +26,16 @@
 </nav>
 <!-- NAVBAR -->
 
-    <body>
-        <html>
-            <h1>
-            Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
-            </h1>
-            </html>
+<h1>Contact</h1>
 
-    </body>
+<address>
+Written by <a href="mailto:steve@thecarBiz.com">Steve Dohe</a>.<br> 
+Visit us at:<br>
+carBiz.com<br>
+139 Carbiz Ave<br>
+Brooklyn, NY 11211<br>
+USA
+</address>
 
+</body>
 </html>
