--- a/server/djangoappSCD/templates/djangoappSCD/index.html
+++ b/server/djangoappSCD/templates/djangoappSCD/index.html
@@ -19,7 +19,7 @@
               <a class="navbar-brand" href="">Home</a>
               <a class="navbar-brand" href="">NavItem</a>
               <a class="navbar-brand" href="">About</a>
-              <a class="navbar-brand" href="/djangoapp/contact">Contact Us</a>
+              <a class="navbar-brand" href="/djangoappSCD/contact">Contact Us</a>
         </div>
     </div>
 </nav>
