--- a/server/djangoappSCD/templates/djangoappSCD/contact.html
+++ b/server/djangoappSCD/templates/djangoappSCD/contact.html
@@ -17,10 +17,10 @@
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-header">
-              <a class="navbar-brand" href="/djangoapp">Home</a>
+              <a class="navbar-brand" href="/djangoappSCD">Home</a>
               <a class="navbar-brand" href="">NavItem</a>
               <a class="navbar-brand" href="">About</a>
-              <a class="navbar-brand" href="/djangoapp/contact">Contact Us</a>
+              <a class="navbar-brand" href="/djangoappSCD/contact">Contact Us</a>
         </div>
     </div>
 </nav>
