--- a/server/djangoappSCD/templates/djangoappSCD/about.html
+++ b/server/djangoappSCD/templates/djangoappSCD/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Dealership Review</title>
+    <title>About</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -12,26 +12,25 @@
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
 
 </head>
-<!-- NAVBAR -->
+<body>
+    <!-- NAVBAR -->
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-header">
-              <a class="navbar-brand" href="">Home</a>
+              <a class="navbar-brand" href="/djangoappSCD">Home</a>
               <a class="navbar-brand" href="">NavItem</a>
-              <a class="navbar-brand" href="/djangoappSCD/about">About</a>
+              <a class="navbar-brand" href="">About</a>
               <a class="navbar-brand" href="/djangoappSCD/contact">Contact Us</a>
         </div>
     </div>
 </nav>
 <!-- NAVBAR -->
 
-    <body>
-        <html>
-            <h1>
-            Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
-            </h1>
-            </html>
+<h1>Contact</h1>
 
-    </body>
+<h2>
+This is what we are all about.
+</h2>
 
+</body>
 </html>
