--- a/server/djangoappSCD/templates/djangoappSCD/add_review.html
+++ b/server/djangoappSCD/templates/djangoappSCD/add_review.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <title>Add Review</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
+        <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
+        <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+    
+    </head>
+<body>
+    {% include "djangoappSCD/nav.html" %}  
+    <br>
+      <div class="container">
+        <br>
+        {% if created %}
+          <div class="alert alert-success w-100" role="alert">
+              Review posted successfully!!
+          </div>
+        {% endif %}
+        <br>
+        <!--Add review form here -->
+        <h1>Add a review about <strong>{{ dealer.full_name }}</strong></h1>
 
-</head>
-    <body>
-    <!--Add review form here -->
-    </body>
+        <form method="post" action="{% url 'djangoappSCD:addrev' dealer.id %}">
+          {% csrf_token %}
+          <label><b>Enter the review content:</b></label>
+          <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
+          <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck">
+          Has purchased the Car from {{ dealer.full_name }} Dealership?
+          <br>
+
+          <label><b>Select car:</b></label>
+          <select name="car" id="car" class="form-select" required>
+            {% for car in cars %}
+              <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
+            {% endfor %}
+          </select>
+          <br>
+          <label><b>Select purchase date:</b></label>
+          <input class="date-own form-control w-50" type="text" name="purchasedate" id="purchasedate">
+          
+          <br>
+          <input type="submit" class="btn btn-info" value="Submit">
+        </form>
+
+      </div>
+        <script type="text/javascript">
+            $('.date-own').datepicker({
+                format: 'mm/dd/yyyy'
+            });
+        </script>
+  </body>
 </html>
