contactus views and url error fix

--- a/server/djangoappSCD/templates/djangoappSCD/contactus.html
+++ b/server/djangoappSCD/templates/djangoappSCD/contactus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -58,9 +58,14 @@
 
 <h1>Contact</h1>
 
-<h2>
-This is what we are all about.  Interested??
-</h2>
+<address>
+Written by <a href="mailto:steve@thecarBiz.com">Steve Dohe</a>.<br> 
+Visit us at:<br>
+carBiz.com<br>
+139 Carbiz Ave<br>
+Brooklyn, NY 11211<br>
+USA
+</address>
 
 </body>
 </html>
