--- a/server/djangoappSCD/templates/djangoappSCD/index.html
+++ b/server/djangoappSCD/templates/djangoappSCD/index.html
@@ -22,7 +22,7 @@
     <div class="navbar-nav mr-auto">
       <a class="nav-item nav-link" href="/djangoappSCD/">Home</a>
       <a class="nav-item nav-link" href="/djangoappSCD/about">About</a>
-      <a class="nav-item nav-link" href="/djangoappSCD/contact">Contact Us</a>
+      <a class="nav-item nav-link" href="/djangoappSCD/contactus">Contact Us</a>
     </div>
 
     <div class="navbar-nav navbar-right">
