--- a/server/djangoappSCD/templates/djangoappSCD/dealer_details.html
+++ b/server/djangoappSCD/templates/djangoappSCD/dealer_details.html
@@ -21,7 +21,7 @@
             <div class="navbar-header">
                   <a class="navbar-brand" href="/djangoappSCD">Home</a>
                   <a class="navbar-brand" href="">About</a>
-                  <a class="navbar-brand" href="/djangoappSCD/contact">Contact Us</a>
+                  <a class="navbar-brand" href="/djangoappSCD/contactus">Contact Us</a>
             </div>
         </div>
     </nav>
