--- a/server/djangoappSCD/templates/djangoappSCD/dealer_details.html
+++ b/server/djangoappSCD/templates/djangoappSCD/dealer_details.html
@@ -28,41 +28,35 @@
     <!-- NAVBAR -->
 
     <br>
-    <!--Add a dealer table here -->
+    <!-- Add reviews as cards -->
     <div class="container">
-       <table class="table" id="table" data-filter-control="true">
-        <thead>
-          <tr>
-            <th data-field="id">Id</th>
-            <th data-field="full-name">Dealer Name</th>
-            <th data-field="city">City</th>
-            <th data-field="address">Address</th>
-            <th data-field="Zip">Zip</th>
-            <th data-filter-control="select" data-field="State">
-              State
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for dealer in dealerships %}
-            <tr>
-              <td>{{dealer.id}}</td>
-              <td><a href="{% url 'djangoappSCD:details' dealer.id %}">{{dealer.full_name}}</a></td>
-              <td>{{dealer.city}}</td>
-              <td>{{dealer.address}}</td>
-              <td>{{dealer.zip}}</td>
-              <td>{{dealer.st}}</td>
-            </tr>
+        {% if user.is_authenticated %}
+          <a href="{% url 'djangoappSCD:addrev' dealer  %}">(Add a new review)</a>
+        {% endif %}
+        <br>
+        <div class="row">
+  
+          {% for review in reviews %}
+          <div class="card col-md-3 m-1">
+            <div class="card-header">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">{{ review.car_make }}, {{review.car_model }}</h5> 
+              <h5 class="card-title">{{ review.car_year }}</h5> 
+              <p>{{ review.review }}</p> 
+            </div>
+          </div>
           {% endfor %}
-        </tbody>
-       </table>
-     </div>
-    
-    <script>
-        $(function() {
-            $('#table').bootstrapTable()
-        })
-    </script>
-    </body>
+  
+          {% if not reviews %}
+            <div class="alert alert-warning w-100" role="alert">
+              No reviews for this dealer.
+            </div>
+          {% endif %}
+  
+        </div>
+      </div>
+  
+      </body>
 
 </html>
