--- a/server/djangoappSCD/templates/djangoappSCD/registration.html
+++ b/server/djangoappSCD/templates/djangoappSCD/registration.html
@@ -10,12 +10,12 @@
         <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
         <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
         <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-    
+
     </head>
     <body>
-        {% include "djangoappSCD/nav.html" %}  
+        <!-- {% include "djangoappSCD/nav.html" %}   -->
         <!--Add a registration form here -->
-  
+
         {% if 'signin' in request.GET %}
           {% if request.GET.signin == 'exist' %}
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
@@ -26,7 +26,7 @@
             </div>
           {% endif %}
         {% endif %}
-  
+
     <br>
     <div class="container card">
       <div class="card-body">
@@ -55,6 +55,6 @@
         </form>
       </div>
     </div>
-  
+
   </body>
 </html>
