register view fix

--- a/server/djangoappSCD/templates/djangoappSCD/registration.html
+++ b/server/djangoappSCD/templates/djangoappSCD/registration.html
@@ -13,7 +13,7 @@
 
     </head>
     <body>
-        <!-- {% include "djangoappSCD/nav.html" %}   -->
+        {% include "djangoappSCD/nav.html" %}
         <!--Add a registration form here -->
 
         {% if 'signin' in request.GET %}
