--- a/server/djangoappSCD/templates/djangoappSCD/add_review.html
+++ b/server/djangoappSCD/templates/djangoappSCD/add_review.html
@@ -10,51 +10,11 @@
         <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
         <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
         <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-    
-    </head>
-<body>
 
-    <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Car Dealership</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav mr-auto">
-        <a class="nav-item nav-link" href="/djangoappSCD/">Home</a>
-        <a class="nav-item nav-link" href="/djangoappSCD/about">About</a>
-        <a class="nav-item nav-link" href="/djangoappSCD/contactus">Contact Us</a>
-      </div>
-  
-      <div class="navbar-nav navbar-right">
-        {% if request.user.is_authenticated %}
-            <a class="nav-item nav-link text-primary" href="#">({{ request.user.username }})</a>
-            <a class="nav-item nav-link text-primary" href="{% url 'djangoappSCD:logout' %}">Logout</a>
-        {% else %}
-        <form method="POST" action="{% url 'djangoappSCD:login' %}">
-          {% csrf_token %}
-          <div class="form-row justify-content-end">
-            <div class="col-3">
-              <input class="form-control mr-sm-1" type="text" name="user">
-            </div>
-            <div class="col-3">
-              <input class="form-control mr-sm-1" type="password" name="password">
-            </div>
-            <div class="col-2">
-              <button class="btn btn-info" type="submit">Login</button>
-            </div>
-            <div class="col-2">
-              <a class="btn btn-link" href="{% url 'djangoappSCD:register' %}">Sign Up</a>
-            </div>
-          </div>
-        </form>
-        {% endif %}
-      </div>
-  
-    </div>
-  </nav>
-  <!-- NAVBAR -->
+    </head>
+    <body>
+
+      {% include "djangoappSCD/nav.html" %}
 
     <br>
       <div class="container">
@@ -85,7 +45,7 @@
           <br>
           <label><b>Select purchase date:</b></label>
           <input class="date-own form-control w-50" type="text" name="purchasedate" id="purchasedate">
-          
+
           <br>
           <input type="submit" class="btn btn-info" value="Submit">
         </form>
