--- a/server/djangoappSCD/templates/djangoappSCD/dealer_details.html
+++ b/server/djangoappSCD/templates/djangoappSCD/dealer_details.html
@@ -10,22 +10,11 @@
         <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
         <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
         <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-    
+
     </head>
 
     <body>
-
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                  <a class="navbar-brand" href="/djangoappSCD">Home</a>
-                  <a class="navbar-brand" href="">About</a>
-                  <a class="navbar-brand" href="/djangoappSCD/contactus">Contact Us</a>
-            </div>
-        </div>
-    </nav>
-    <!-- NAVBAR -->
+        {% include "djangoappSCD/nav.html" %}
 
     <br>
     <!-- Add reviews as cards -->
@@ -35,28 +24,28 @@
         {% endif %}
         <br>
         <div class="row">
-  
+
           {% for review in reviews %}
           <div class="card col-md-3 m-1">
             <div class="card-header">
             </div>
             <div class="card-body">
-              <h5 class="card-title">{{ review.car_make }}, {{review.car_model }}</h5> 
-              <h5 class="card-title">{{ review.car_year }}</h5> 
-              <p>{{ review.review }}</p> 
+              <h5 class="card-title">{{ review.car_make }}, {{review.car_model }}</h5>
+              <h5 class="card-title">{{ review.car_year }}</h5>
+              <p>{{ review.review }}</p>
             </div>
           </div>
           {% endfor %}
-  
+
           {% if not reviews %}
             <div class="alert alert-warning w-100" role="alert">
               No reviews for this dealer.
             </div>
           {% endif %}
-  
+
         </div>
       </div>
-  
+
       </body>
 
 </html>
