about page content fix

--- a/server/djangoappSCD/templates/djangoappSCD/about.html
+++ b/server/djangoappSCD/templates/djangoappSCD/about.html
@@ -25,7 +25,7 @@
         <a class="nav-item nav-link" href="/djangoappSCD/about">About</a>
         <a class="nav-item nav-link" href="/djangoappSCD/contactus">Contact Us</a>
       </div>
-  
+
       <div class="navbar-nav navbar-right">
         {% if request.user.is_authenticated %}
             <a class="nav-item nav-link text-primary" href="#">({{ request.user.username }})</a>
@@ -50,16 +50,16 @@
         </form>
         {% endif %}
       </div>
-  
+
     </div>
   </nav>
   <!-- NAVBAR -->
-  
 
-<h1>Contact</h1>
+
+<h1>About</h1>
 
 <h2>
-This is what we are all about.  Interested??
+We showcase the best car dealers with the best cars, at the best prices.  Interested??
 </h2>
 
 </body>
